--- a/app/views/backend/transports/show.html.haml
+++ b/app/views/backend/transports/show.html.haml
@@ -1,6 +1,6 @@
 =main_toolbar do |t|
+  -t.export :transport, @transport
   -t.edit @transport
-  -t.print_transport @transport
 
 =attributes_list(@transport) do |l|
   -l.attribute :number
