--- a/app/views/backend/purchases/show.html.haml
+++ b/app/views/backend/purchases/show.html.haml
@@ -1,6 +1,7 @@
 =purchase_steps if params[:step]
 
 =main_toolbar do |t|
+  -t.export :purchase, @purchase
   -t.edit @purchase if @purchase.draft?
   -if @purchase.can_confirm?
     -t.confirm @purchase, :method=>:post, "data-confirm" => tc(:are_you_sure_you_want_to_confirm)
@@ -9,7 +10,6 @@
   -for event in [:propose, :correct, :refuse]
     -t.send(event, @purchase, :method=>:post, "data-confirm" => tc(:are_you_sure)) if @purchase.send("can_#{event}?")
   -t.abort(@purchase, :method=>:post, "data-confirm" => tc(:are_you_sure)) if @purchase.can_abort?
-  -t.print_purchase @purchase
 
 =beehive do |b|
 
