Begins the DMS interface and reviews kujakus for that

--- a/app/themes/tekyla/stylesheets/beehive.css.scss
+++ b/app/themes/tekyla/stylesheets/beehive.css.scss
@@ -127,6 +127,10 @@
                   margin-left : 0;
                   .cell-title { display: none; }
                   .cell-content {
+                    @if $i > 1 {
+                      padding-left: 0;
+                      padding-right: 0;
+                    }
                     border-bottom: $cell-border;
                     border-top: none;
                     max-height: 20em;
