--- a/app/views/backend/helps/index.html.haml
+++ b/app/views/backend/helps/index.html.haml
@@ -1,10 +1,17 @@
 =kujaku
 
-%table.full-width
+=subheading(:x_results, :count => @search[:count], :here => true) if @search
+
+=search_results(@search) do |result|
+  %h3
+    =link_to(result["title"].html_safe, "#", 'data-toggle' => 'result')
+    %small=result["pertinence"]
+  .content.collapsed=help(result["file"])
+
+-#%table.full-width
   %tr
     -if @results
       %td.results{:valign=>:top}
-        %h2=tc(:results, :count=>@results.size)
         -if @results.size>0
           %ul
             -for r in @results[0..@per_page-1]
