--- a/app/themes/tekyla/stylesheets/buttons.css.scss
+++ b/app/themes/tekyla/stylesheets/buttons.css.scss
@@ -153,17 +153,17 @@ a.btn, button {
   & + & {
     margin-left: $default-gap;
   }
-  > button, > a.button, > a.btn, > input, > select {
+  > button, > a, > a.button, > a.btn, > input, > select {
     @include border-radius(0);
     @include margin-left(-1 * $menu-border-width);
     z-index: 1;
     &:first-child {
       @include margin-left(0);
     }
-    html[dir="ltr"] &:first-of-type, html[dir="rtl"] &:last-of-type {
+    html[dir="ltr"] &:first-child, html[dir="rtl"] &:last-child {
       @include border-left-radius($buttons-radius);
     }
-    html[dir="ltr"] &:last-of-type, html[dir="rtl"] &:first-of-type {
+    html[dir="ltr"] &:last-child, html[dir="rtl"] &:first-child {
       @include border-right-radius($buttons-radius);
     }
     &:focus, &:hover, &:active {
