--- a/app/themes/tekyla/stylesheets/screen.css.scss
+++ b/app/themes/tekyla/stylesheets/screen.css.scss
@@ -27,8 +27,9 @@ $fingertip-height: 2 * round($fingertip-height / 2);
 
 $base-color: #688ED8 !default;
 $neutral-color: #777 !default;
-$desktop-background: #FFFFFF !default;
+$desktop-background: #F7F7F7 !default;
 $text-color: #222 !default;
+$invalid-color: #D81E08 !default;
 
 $hover-transparency: 0.85;
 $hover-mask: transparentize($base-color, $hover-transparency);
@@ -45,7 +46,6 @@ $title-color: darken($base-color, 40%);
 $base-font-color:  $text-color;
 $base-font-reversed-color:  #FFF;
 $important-color: #D88E68;
-$invalid-color: red;
 
 $neutral-background: change-color($neutral-color, $lightness: 90%);
 $input-background: $desktop-background;
