--- a/app/views/backend/animals/show.html.haml
+++ b/app/views/backend/animals/show.html.haml
@@ -1,6 +1,7 @@
 =main_toolbar do |t|
+  -t.export do |e|
+    -e.animal_sheet @animal.identification_number, @animal
   -t.edit @animal
-  -t.export :animal, @animal
   -t.destroy(@animal, :method=>:delete, "data-confirm" => tg(:are_you_sure_you_want_to_delete)) if @animal.destroyable?
 
 =beehive do |b|
